Fix varios